<resources>
    <string name="app_name">CurriculumDesign</string>
    <string name="title">注册</string>
    <string name="info">本软件用户注册功能，输入资料后点击注册显示信息，点击取消清空输入。</string>
    <string name="user">请输入用户名</string>
    <string name="pwd">请输入密码</string>
    <string name="name">请输入真实姓名</string>
    <string name="email">请输入邮箱</string>

    <string name="q1">看小说</string>
    <string name="q2">玩游戏</string>
    <string name="q3">吃饭</string>
    <string name="q4">睡觉</string>
    <string name="q5">打豆豆</string>
    <string name="q6">听音乐</string>

</resources>