<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

    </TableLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

    </RelativeLayout>

    <Button
        android:id="@+id/btLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="doClick"
        android:text="注册"
        tools:ignore="MissingConstraints,OnClick"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="626dp" />

    <Button
        android:id="@+id/btExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="doClick"
        android:text="取消"
        tools:ignore="MissingConstraints,OnClick"
        tools:layout_editor_absoluteX="232dp"
        tools:layout_editor_absoluteY="626dp" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="421dp"
        android:layout_height="48dp"
        android:layout_marginStart="1dp"
        android:text="@string/info"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="账号"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="98dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="密码"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tableRow5"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.444"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="姓名"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="197dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="邮箱"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        tools:ignore="MissingConstraints,NotSibling"
        tools:layout_editor_absoluteY="248dp" />

    <EditText
        android:id="@+id/etUser"
        android:layout_width="283dp"
        android:layout_height="47dp"
        android:hint="@string/user"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="83dp" />

    <EditText
        android:id="@+id/etPass"
        android:layout_width="283dp"
        android:layout_height="47dp"
        android:layout_marginTop="4dp"
        android:hint="@string/pwd"
        app:layout_constraintBottom_toBottomOf="@+id/tableRow5"
        app:layout_constraintTop_toBottomOf="@+id/etUser"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="84dp" />


    <EditText
        android:id="@+id/etname"
        android:layout_width="283dp"
        android:layout_height="47dp"
        android:layout_marginTop="2dp"
        android:hint="@string/name"
        app:layout_constraintBottom_toBottomOf="@+id/tableRow6"
        app:layout_constraintTop_toBottomOf="@+id/etPass"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints,NotSibling"
        tools:layout_editor_absoluteX="84dp" />

    <EditText
        android:id="@+id/etemail"
        android:layout_width="283dp"
        android:layout_height="47dp"
        android:layout_marginTop="2dp"
        android:hint="@string/email"
        app:layout_constraintBottom_toBottomOf="@+id/tableRow7"
        app:layout_constraintTop_toBottomOf="@+id/etname"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints,NotSibling"
        tools:layout_editor_absoluteX="84dp" />

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="130dp">

    </TableRow>


    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="180dp">

    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="230dp">


    </TableRow>

    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="280dp">

    </TableRow>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etemail"
        tools:ignore="MissingConstraints">


        <TextView
            android:layout_width="15dp"
            android:layout_height="wrap_content"


            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="性别"
            android:textSize="24sp"
            tools:ignore="MissingConstraints" />

        <RadioGroup
            android:id="@+id/rgSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints" />
        android:checkedButton="@+id/rdoMale">

        <RadioButton
            android:id="@id/rdoMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="男" />

        <RadioButton
            android:id="@+id/rdoFemale"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="女" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="年龄"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="337dp" />

    <Spinner
        android:id="@+id/spRealAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        tools:layout_editor_absoluteY="341dp" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

    </LinearLayout>

    <TextView
        android:layout_width="75dp"
        android:layout_height="34dp"
        android:text="爱好"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,NotSibling"
        tools:layout_editor_absoluteY="413dp" />


</androidx.constraintlayout.widget.ConstraintLayout>